[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# Reduce the Rust binary size and reduces the size of the images further.
# https://kerkour.com/optimize-rust-binary-size
[profile.release]
lto = true
codegen-units = 1
